rancher/rancher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: renda-fixa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: rancher/server:latest  # Aqui está a imagem do Rancher
        ports:
        - containerPort: 80
