rancher/rancher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-service  # Nome do serviço corrigido
  namespace: renda-fixa
spec:
  selector:
    app: rancher
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
